name:                food-database
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/JoelColledge/food-database#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Colledge
maintainer:          joel.colledge@gmail.com
copyright:           2015 Joel Colledge
category:            None
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  default-language:    Haskell2010
  exposed-modules: FoodDatabase

  other-extensions: DeriveDataTypeable
                    TypeFamilies
                    ViewPatterns
                    TemplateHaskell

  build-depends:       base >= 4.7 && < 5,
                       acid-state,
                       safecopy,
                       mtl,
                       ixset,
                       text
